--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,11 @@
       <artifactId>c3p0</artifactId>
       <version>0.9.5.2</version>
     </dependency>
-    <!-- Mysql Connector -->
+    <!-- PostgreSQL Connector -->
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>6.0.5</version>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.18</version>
     </dependency>
     <!-- Jackson API for JSON -->
     <dependency>
