--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,16 +1,23 @@
-# MySQL properties
-mysql.driver=com.mysql.cj.jdbc.Driver
-mysql.url=jdbc:mysql://localhost:3306/flightsapi
-mysql.user=root
-mysql.password=root
+# DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.driver=org.postgresql.Drive
+# JDBC URL of the database.
+spring.datasource.url=jdbc:postgresql://localhost:3306/flightsapi
+# Login username of the database.
+spring.datasource.username=username
+# Login password of the database.
+spring.datasource.password=password
 
-# Hibernate properties
-hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
+# JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 
-#C3P0 properties
-hibernate.c3p0.min_size=5
-hibernate.c3p0.max_size=20
-hibernate.c3p0.acquire_increment=1
-hibernate.c3p0.timeout=1800
-hibernate.c3p0.max_statements=150
+# DDL mode. This is actually a shortcut for the "hibernate.hbm2ddl.auto" property. Defaults to "create-drop" when using an embedded database and no schema manager was detected. Otherwise, defaults to "none".
+spring.jpa.hibernate.ddl-auto=update
+# Whether to enable logging of SQL statements.
+spring.jpa.show-sql=true
+
+# Hibernate additional native properties to set on the JPA provider.
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.current_session_context_class=thread
+spring.jpa.properties.hibernate.format_sql=true
+
+# Fix Postgres JPA Error (Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented).
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
