--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
             <version>1.18.16</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.vavr/vavr -->
+        <dependency>
+            <groupId>io.vavr</groupId>
+            <artifactId>vavr</artifactId>
+            <version>0.9.0</version>
+        </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
@@ -83,7 +89,6 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-
             <!-- Embedded Apache Tomcat required for testing web application -->
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
