--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-# MySQL properties
+# PostgreSQL properties
 db.driver=org.postgresql.Driver
 db.url=jdbc:postgresql://localhost:5432/flightsapi
 db.user=postgres
