--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,8 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>5.2.12.RELEASE</version>
+            <version>5.3.3</version>
         </dependency>
-
         <!-- Spring ORM -->
         <dependency>
             <groupId>org.springframework</groupId>
