Changing add flight endpoint for convinience and adding some testing deependencies.

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,22 @@
             <artifactId>vavr</artifactId>
             <version>0.9.0</version>
         </dependency>
+        <!-- TestNG -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.0.0</version>
+            <scope>test</scope>
+            </dependency>
+        <!-- Assertions -->
+        <dependency>
+        <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.19.0</version>
+            <scope>test</scope>
+        </dependency>
+
+
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
