--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,3 +7,11 @@ workflows:
   maven_test:
     jobs:
       - maven/test # checkout, build, test, and upload test results
+
+jobs:
+  build:
+    docker:
+      - image: cimg/openjdk:15.0.1
+    steps:
+      - checkout
+      - run: java --version
